--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.447.0",
     "next": "15.0.0-canary.179",
+    "next-plausible": "^3.12.2",
     "pdf-lib": "^1.17.1",
     "react": "19.0.0-rc-2d16326d-20240930",
     "react-dom": "19.0.0-rc-2d16326d-20240930",
