--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "@radix-ui/react-slot": "^1.1.0",
+    "@zip.js/zip.js": "^2.7.52",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "file-type": "^19.6.0",
     "lucide-react": "^0.447.0",
     "next": "15.0.0-canary.179",
     "next-plausible": "^3.12.2",
