--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@zip.js/zip.js": "^2.7.52",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
+        "crisp-sdk-web": "^1.0.25",
         "file-type": "^19.6.0",
         "lucide-react": "^0.447.0",
         "next": "15.0.2-canary.8",
