--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "@heroicons/react": "^2.1.5",
         "@radix-ui/react-slot": "^1.1.0",
+        "@sentry/nextjs": "^8",
         "@zip.js/zip.js": "^2.7.52",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
