--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "dependencies": {
         "@heroicons/react": "^2.1.5",
         "@radix-ui/react-slot": "^1.1.0",
+        "@sentry/browser": "^8.48.0",
         "@sentry/nextjs": "^8",
         "@zip.js/zip.js": "^2.7.52",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "crisp-sdk-web": "^1.0.25",
         "file-type": "^19.6.0",
+        "jschardet": "^3.1.4",
         "lucide-react": "^0.447.0",
         "next": "15.0.2-canary.8",
         "next-plausible": "^3.12.2",
