--- a/package.json
+++ b/package.json
@@ -1,45 +1,46 @@
 {
-  "name": "watermark",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@heroicons/react": "^2.1.5",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@sentry/browser": "^8.48.0",
-    "@sentry/nextjs": "^8",
-    "@uidotdev/usehooks": "^2.4.1",
-    "@ungap/with-resolvers": "^0.1.0",
-    "@zip.js/zip.js": "^2.7.52",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "crisp-sdk-web": "^1.0.25",
-    "file-type": "^19.6.0",
-    "jschardet": "^3.1.4",
-    "lucide-react": "^0.447.0",
-    "next": "15.6.0-canary.60",
-    "next-plausible": "^3.12.2",
-    "pdf-lib": "^1.17.1",
-    "react": "19.0.0-rc-cae764ce-20241025",
-    "react-dom": "19.0.0-rc-cae764ce-20241025",
-    "react-hook-form": "^7.53.0",
-    "react-pdf": "^9.1.1",
-    "tailwind-merge": "^2.5.3",
-    "tailwindcss-animate": "^1.0.7"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.2-canary.8",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+    "name": "watermark",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build --webpack",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@heroicons/react": "^2.1.5",
+        "@radix-ui/react-slot": "^1.1.0",
+        "@sentry/browser": "^8.48.0",
+        "@sentry/nextjs": "^8",
+        "@uidotdev/usehooks": "^2.4.1",
+        "@ungap/with-resolvers": "^0.1.0",
+        "@zip.js/zip.js": "^2.7.52",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.1",
+        "crisp-sdk-web": "^1.0.25",
+        "file-type": "^19.6.0",
+        "jschardet": "^3.1.4",
+        "lucide-react": "^0.447.0",
+        "next": "15.6.0-canary.60",
+        "next-plausible": "^3.12.2",
+        "pdf-lib": "^1.17.1",
+        "react": "19.0.0-rc-cae764ce-20241025",
+        "react-dom": "19.0.0-rc-cae764ce-20241025",
+        "react-hook-form": "^7.53.0",
+        "react-pdf": "^9.1.1",
+        "tailwind-merge": "^2.5.3",
+        "tailwindcss-animate": "^1.0.7"
+    },
+    "devDependencies": {
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "baseline-browser-mapping": "^2.9.14",
+        "eslint": "^8",
+        "eslint-config-next": "15.0.2-canary.8",
+        "postcss": "^8",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5"
+    }
 }
